[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/gui/main_menu.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.498039 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Node" parent="."]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -70.0
margin_right = 100.0
margin_bottom = 70.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 36.0
size_flags_vertical = 3
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="VBoxContainer"]
margin_top = 51.0
margin_right = 200.0
margin_bottom = 87.0
size_flags_vertical = 3
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 200.0
margin_bottom = 140.0
size_flags_vertical = 3
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -24.0
margin_right = 101.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer"]
margin_right = 202.0
margin_bottom = 24.0
placeholder_text = "Enter name..."

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 28.0
margin_right = 202.0
margin_bottom = 48.0

[node name="ContinueButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 99.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Continue"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 103.0
margin_right = 202.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Cancel"
[connection signal="pressed" from="VBoxContainer/PlayButton" to="MainMenu" method="start_single_player"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="MainMenu" method="_on_JoinButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HostButton" to="MainMenu" method="_on_HostButton_pressed"]
[connection signal="text_changed" from="Panel/VBoxContainer/LineEdit" to="MainMenu" method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/CancelButton" to="MainMenu" method="_on_CancelButton_pressed"]
